# aimo-proof-pilot-inference

./: .dockerignore  .gitattributes  .gitignore  CHANGES_VS_UPSTREAM.md  Dockerfile  NII_CONTROL_PANEL.md  NII_VLLM_SETUP.md  README.md  RUN_PY_MULTINODE.md  SGLANG_FP8_KV.md  config-blackwell.yaml  config-dynamic.yaml  config-model-deploy-budget-1x.yaml  config-model-deploy-budget-2x.yaml  config-model-deploy-budget-4x.yaml  config-model-deploy-budget-high.yaml  config-model-deploy-budget-medium.yaml  config-model-deploy-budget-xhigh.yaml  config-model-olmo3-opd-sft-750-budget-medium.yaml  config-model-step225-budget-1x.yaml  config-model-step225-budget-2x.yaml  config-model-step225-budget-4x.yaml  config-model-step225-budget-high.yaml  config-model-step225-budget-medium.yaml  config-model-step225-budget-xhigh.yaml  config-nii-bugfix-p145.yaml  config-nii-r4.yaml  config-nii-step125-r4.yaml  config.yaml  dflash-generation-correctness.md  dflash-kv-cache-architecture.md  download_models.sh  imo-2026.jsonl  kv-cache-and-prefix-caching.md  kv_cache_experiment.py  run.py  run_submission.sh  scheduler.sh  serve_opd32b.sh
control-panel-nguyen/: README.md  app.py  requirements.txt
docker/: entrypoint.sh  inspect_config.py
eval/: problems.csv  run_eval.sh
evaluation/: EVALUATION_DESIGN.md  EXPERIMENTS.md  HUMMING_MLP_NUMERICAL_DIAGNOSIS.md  (+23 more)
vllm_patches/: README.md  fa4_fp8_kv_flash_attn.patch  fa4_fp8_kv_vllm.patch  install.sh  patch_dflash_context_cutoff.py  patch_fa4_fp8_kv.py  pyproject.toml
vllm_patches/src/olmo3_sink_vllm/: __init__.py  dflash.py  model.py
(+1704 files in other folders)
